simtk/openmm/7.1.1/build/include/AmoebaOpenMMCWrapper.h

/* Global Constants */


/* Type Declarations */

typedef struct OpenMM_AmoebaAngleForce_struct OpenMM_AmoebaAngleForce;
typedef struct OpenMM_AmoebaAngleTorsionForce_struct OpenMM_AmoebaAngleTorsionForce;
extern OPENMM_EXPORT_AMOEBA int OpenMM_AmoebaAngleForce_addAngle(OpenMM_AmoebaAngleForce* target, int particle1, int particle2, int particle3, double length, double quadraticK);
extern OPENMM_EXPORT_AMOEBA void OpenMM_AmoebaAngleForce_getAngleParameters(const OpenMM_AmoebaAngleForce* target, int index, int* particle1, int* particle2, int* particle3, double* length, double* quadraticK);
extern OPENMM_EXPORT_AMOEBA void OpenMM_AmoebaAngleForce_setAngleParameters(OpenMM_AmoebaAngleForce* target, int index, int particle1, int particle2, int particle3, double length, double quadraticK);
extern OPENMM_EXPORT_AMOEBA void OpenMM_AmoebaAngleForce_updateParametersInContext(OpenMM_AmoebaAngleForce* target, OpenMM_Context* context);
extern OPENMM_EXPORT_AMOEBA void OpenMM_AmoebaAngleForce_setUsesPeriodicBoundaryConditions(OpenMM_AmoebaAngleForce* target, OpenMM_Boolean periodic);
extern OPENMM_EXPORT_AMOEBA OpenMM_Boolean OpenMM_AmoebaAngleForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaAngleForce* target);
/* AmoebaAngleTorsionForce */
extern OPENMM_EXPORT_AMOEBA OpenMM_AmoebaAngleTorsionForce* OpenMM_AmoebaAngleTorsionForce_create();
extern OPENMM_EXPORT_AMOEBA void OpenMM_AmoebaAngleTorsionForce_destroy(OpenMM_AmoebaAngleTorsionForce* target);
extern OPENMM_EXPORT_AMOEBA int OpenMM_AmoebaAngleTorsionForce_getNumAngleTorsions(const OpenMM_AmoebaAngleTorsionForce* target);
extern OPENMM_EXPORT_AMOEBA int OpenMM_AmoebaAngleTorsionForce_addAngleTorsion(OpenMM_AmoebaAngleTorsionForce* target, int particle1, int particle2, int particle3, int particle4, double angleCBA, double angleDCB, double k1, double k2, double k3, double k4, double k5, double k6);
extern OPENMM_EXPORT_AMOEBA void OpenMM_AmoebaAngleTorsionForce_getAngleTorsionParameters(const OpenMM_AmoebaAngleTorsionForce* target, int index, int* particle1, int* particle2, int* particle3, int* particle4, double* angleCBA, double* angleDCB, double* k1, double* k2, double* k3, double* k4, double* k5, double* k6);
extern OPENMM_EXPORT_AMOEBA void OpenMM_AmoebaAngleTorsionForce_setAngleTorsionParameters(OpenMM_AmoebaAngleTorsionForce* target, int index, int particle1, int particle2, int particle3, int particle4, double angleCBA, double angleDCB, double k1, double k2, double k3, double k4, double k5, double k6);
extern OPENMM_EXPORT_AMOEBA void OpenMM_AmoebaAngleTorsionForce_updateParametersInContext(OpenMM_AmoebaAngleTorsionForce* target, OpenMM_Context* context);