simtk/openmm/7.1/build/simtk/openmm/OpenMMAmoebaLibrary.java

	/** Original signature : <code>int OpenMM_AmoebaAngleForce_addAngle(OpenMM_AmoebaAngleForce*, int, int, int, double, double)</code> */
	int OpenMM_AmoebaAngleForce_addAngle(PointerByReference target, int particle1, int particle2, int particle3, double length, double quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleForce_getAngleParameters(const OpenMM_AmoebaAngleForce*, int, int*, int*, int*, double*, double*)</code><br>
	 * @deprecated use the safer methods {@link #OpenMM_AmoebaAngleForce_getAngleParameters(com.sun.jna.ptr.PointerByReference, int, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer)} and {@link #OpenMM_AmoebaAngleForce_getAngleParameters(com.sun.jna.ptr.PointerByReference, int, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleForce_getAngleParameters(Pointer target, int index, IntByReference particle1, IntByReference particle2, IntByReference particle3, DoubleByReference length, DoubleByReference quadraticK);
	/** Original signature : <code>void OpenMM_AmoebaAngleForce_getAngleParameters(const OpenMM_AmoebaAngleForce*, int, int*, int*, int*, double*, double*)</code> */
	void OpenMM_AmoebaAngleForce_getAngleParameters(PointerByReference target, int index, IntBuffer particle1, IntBuffer particle2, IntBuffer particle3, DoubleBuffer length, DoubleBuffer quadraticK);
	/** Original signature : <code>void OpenMM_AmoebaAngleForce_getAngleParameters(const OpenMM_AmoebaAngleForce*, int, int*, int*, int*, double*, double*)</code> */
	void OpenMM_AmoebaAngleForce_getAngleParameters(PointerByReference target, int index, IntByReference particle1, IntByReference particle2, IntByReference particle3, DoubleByReference length, DoubleByReference quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleForce_setAngleParameters(OpenMM_AmoebaAngleForce*, int, int, int, int, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_setAngleParameters(com.sun.jna.ptr.PointerByReference, int, int, int, int, double, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleForce_setAngleParameters(Pointer target, int index, int particle1, int particle2, int particle3, double length, double quadraticK);
	/** Original signature : <code>void OpenMM_AmoebaAngleForce_setAngleParameters(OpenMM_AmoebaAngleForce*, int, int, int, int, double, double)</code> */
	void OpenMM_AmoebaAngleForce_setAngleParameters(PointerByReference target, int index, int particle1, int particle2, int particle3, double length, double quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleForce_updateParametersInContext(OpenMM_AmoebaAngleForce*, OpenMM_Context*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_updateParametersInContext(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleForce_updateParametersInContext(Pointer target, Pointer context);
	/** Original signature : <code>void OpenMM_AmoebaAngleForce_updateParametersInContext(OpenMM_AmoebaAngleForce*, OpenMM_Context*)</code> */
	void OpenMM_AmoebaAngleForce_updateParametersInContext(PointerByReference target, PointerByReference context);
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleForce_setUsesPeriodicBoundaryConditions(OpenMM_AmoebaAngleForce*, OpenMM_Boolean)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_setUsesPeriodicBoundaryConditions(com.sun.jna.ptr.PointerByReference, int)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleForce_setUsesPeriodicBoundaryConditions(Pointer target, int periodic);
	/** Original signature : <code>void OpenMM_AmoebaAngleForce_setUsesPeriodicBoundaryConditions(OpenMM_AmoebaAngleForce*, OpenMM_Boolean)</code> */
	void OpenMM_AmoebaAngleForce_setUsesPeriodicBoundaryConditions(PointerByReference target, int periodic);
	/**
	 * Original signature : <code>OpenMM_Boolean OpenMM_AmoebaAngleForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleForce_usesPeriodicBoundaryConditions(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaAngleForce_usesPeriodicBoundaryConditions(Pointer target);
	/** Original signature : <code>OpenMM_Boolean OpenMM_AmoebaAngleForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaAngleForce*)</code> */
	int OpenMM_AmoebaAngleForce_usesPeriodicBoundaryConditions(PointerByReference target);
	/**
	 * AmoebaAngleTorsionForce<br>
	 * Original signature : <code>OpenMM_AmoebaAngleTorsionForce* OpenMM_AmoebaAngleTorsionForce_create()</code>
	 */
	PointerByReference OpenMM_AmoebaAngleTorsionForce_create();
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleTorsionForce_destroy(OpenMM_AmoebaAngleTorsionForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleTorsionForce_destroy(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleTorsionForce_destroy(Pointer target);
	/** Original signature : <code>void OpenMM_AmoebaAngleTorsionForce_destroy(OpenMM_AmoebaAngleTorsionForce*)</code> */
	void OpenMM_AmoebaAngleTorsionForce_destroy(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaAngleTorsionForce_getNumAngleTorsions(const OpenMM_AmoebaAngleTorsionForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleTorsionForce_getNumAngleTorsions(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaAngleTorsionForce_getNumAngleTorsions(Pointer target);
	/** Original signature : <code>int OpenMM_AmoebaAngleTorsionForce_getNumAngleTorsions(const OpenMM_AmoebaAngleTorsionForce*)</code> */
	int OpenMM_AmoebaAngleTorsionForce_getNumAngleTorsions(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaAngleTorsionForce_addAngleTorsion(OpenMM_AmoebaAngleTorsionForce*, int, int, int, int, double, double, double, double, double, double, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleTorsionForce_addAngleTorsion(com.sun.jna.ptr.PointerByReference, int, int, int, int, double, double, double, double, double, double, double, double)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaAngleTorsionForce_addAngleTorsion(Pointer target, int particle1, int particle2, int particle3, int particle4, double angleCBA, double angleDCB, double k1, double k2, double k3, double k4, double k5, double k6);
	/** Original signature : <code>int OpenMM_AmoebaAngleTorsionForce_addAngleTorsion(OpenMM_AmoebaAngleTorsionForce*, int, int, int, int, double, double, double, double, double, double, double, double)</code> */
	int OpenMM_AmoebaAngleTorsionForce_addAngleTorsion(PointerByReference target, int particle1, int particle2, int particle3, int particle4, double angleCBA, double angleDCB, double k1, double k2, double k3, double k4, double k5, double k6);
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleTorsionForce_getAngleTorsionParameters(const OpenMM_AmoebaAngleTorsionForce*, int, int*, int*, int*, int*, double*, double*, double*, double*, double*, double*, double*, double*)</code><br>
	 * @deprecated use the safer methods {@link #OpenMM_AmoebaAngleTorsionForce_getAngleTorsionParameters(com.sun.jna.ptr.PointerByReference, int, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer)} and {@link #OpenMM_AmoebaAngleTorsionForce_getAngleTorsionParameters(com.sun.jna.ptr.PointerByReference, int, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleTorsionForce_getAngleTorsionParameters(Pointer target, int index, IntByReference particle1, IntByReference particle2, IntByReference particle3, IntByReference particle4, DoubleByReference angleCBA, DoubleByReference angleDCB, DoubleByReference k1, DoubleByReference k2, DoubleByReference k3, DoubleByReference k4, DoubleByReference k5, DoubleByReference k6);
	/** Original signature : <code>void OpenMM_AmoebaAngleTorsionForce_getAngleTorsionParameters(const OpenMM_AmoebaAngleTorsionForce*, int, int*, int*, int*, int*, double*, double*, double*, double*, double*, double*, double*, double*)</code> */
	void OpenMM_AmoebaAngleTorsionForce_getAngleTorsionParameters(PointerByReference target, int index, IntBuffer particle1, IntBuffer particle2, IntBuffer particle3, IntBuffer particle4, DoubleBuffer angleCBA, DoubleBuffer angleDCB, DoubleBuffer k1, DoubleBuffer k2, DoubleBuffer k3, DoubleBuffer k4, DoubleBuffer k5, DoubleBuffer k6);
	/** Original signature : <code>void OpenMM_AmoebaAngleTorsionForce_getAngleTorsionParameters(const OpenMM_AmoebaAngleTorsionForce*, int, int*, int*, int*, int*, double*, double*, double*, double*, double*, double*, double*, double*)</code> */
	void OpenMM_AmoebaAngleTorsionForce_getAngleTorsionParameters(PointerByReference target, int index, IntByReference particle1, IntByReference particle2, IntByReference particle3, IntByReference particle4, DoubleByReference angleCBA, DoubleByReference angleDCB, DoubleByReference k1, DoubleByReference k2, DoubleByReference k3, DoubleByReference k4, DoubleByReference k5, DoubleByReference k6);
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleTorsionForce_setAngleTorsionParameters(OpenMM_AmoebaAngleTorsionForce*, int, int, int, int, int, double, double, double, double, double, double, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleTorsionForce_setAngleTorsionParameters(com.sun.jna.ptr.PointerByReference, int, int, int, int, int, double, double, double, double, double, double, double, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleTorsionForce_setAngleTorsionParameters(Pointer target, int index, int particle1, int particle2, int particle3, int particle4, double angleCBA, double angleDCB, double k1, double k2, double k3, double k4, double k5, double k6);
	/** Original signature : <code>void OpenMM_AmoebaAngleTorsionForce_setAngleTorsionParameters(OpenMM_AmoebaAngleTorsionForce*, int, int, int, int, int, double, double, double, double, double, double, double, double)</code> */
	void OpenMM_AmoebaAngleTorsionForce_setAngleTorsionParameters(PointerByReference target, int index, int particle1, int particle2, int particle3, int particle4, double angleCBA, double angleDCB, double k1, double k2, double k3, double k4, double k5, double k6);
	/**
	 * Original signature : <code>void OpenMM_AmoebaAngleTorsionForce_updateParametersInContext(OpenMM_AmoebaAngleTorsionForce*, OpenMM_Context*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaAngleTorsionForce_updateParametersInContext(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaAngleTorsionForce_updateParametersInContext(Pointer target, Pointer context);
	/** Original signature : <code>void OpenMM_AmoebaAngleTorsionForce_updateParametersInContext(OpenMM_AmoebaAngleTorsionForce*, OpenMM_Context*)</code> */
	void OpenMM_AmoebaAngleTorsionForce_updateParametersInContext(PointerByReference target, PointerByReference context);
